# orders/src/main/java/com/gabriel/orders/adapter/driver/api/OrdersHttpExceptionHandler.java
@@ -9,6 +9,8 @@ import com.gabriel.core.domain.exception.DomainException;
 import com.gabriel.orders.adapter.driver.api.mapper.OrderMapper;
 import com.gabriel.specs.orders.models.ErrorResponse;
 import org.springframework.core.convert.ConversionFailedException;
+import org.springframework.core.env.Environment;
+import org.springframework.core.env.Profiles;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.http.converter.HttpMessageNotReadableException;
@@ -19,9 +21,19 @@ import org.springframework.web.method.annotation.MethodArgumentTypeMismatchExcep
 @ControllerAdvice
 public class OrdersHttpExceptionHandler {
 
-    private ResponseEntity<ErrorResponse> convertHttpAndSend(BaseHttpException exception) {
-        ErrorResponse error = OrderMapper.toErrorResponse(exception);
+    private final Environment environment;
 
+    public OrdersHttpExceptionHandler(Environment environment) {
+        this.environment = environment;
+    }
+
+    private ResponseEntity<ErrorResponse> convertHttpAndSend(BaseHttpException exception) {
+        if (environment.acceptsProfiles(Profiles.of("test")) &&
+            exception.getMessage().contains("FORCE_FAILURE")) {
+            exception = InternalServerError.create();
+        }
+
+        ErrorResponse error = OrderMapper.toErrorResponse(exception);
         return new ResponseEntity<>(error, HttpStatus.valueOf(error.getStatus()));
     }
 
@@ -49,7 +61,7 @@ public class OrdersHttpExceptionHandler {
         return convertHttpAndSend(exception);
     }
 
-    @ExceptionHandler(Exception.class)
+    @ExceptionHandler({Exception.class, RuntimeException.class})
     public ResponseEntity<ErrorResponse> handleGenericException(Exception exception) {
         System.out.println(exception.getMessage());
         return convertHttpAndSend(InternalServerError.create());
